# Cali-Mobile-Manipulator

./: .gitignore  README.md
catkin_ws/src/: README.md
catkin_ws/src/cali_control/: CMakeLists.txt  package.xml
catkin_ws/src/cali_project_moveit_config/: .setup_assistant  package.xml
catkin_ws/src/cali_project_moveit_config/config/: ur3e.srdf
catkin_ws/src/cali_project_moveit_config/launch/: gazebo.launch  planning_context.launch
catkin_ws/src/manipulation/: package.xml
catkin_ws/src/manipulation/launch/: arm_fixed_to_ground.launch  grasp_real.launch  joint_cmds.launch  pick_joint_cmds.launch  pick_perception.launch
catkin_ws/src/manipulation/rviz_config/: arm_to_ground.rviz
catkin_ws/src/manipulation/src/: camera_alignment.py  grasp.py  grasp_real.py  joint_cmds.py  pick_joint_cmds.py  pick_perception.py  release.py
catkin_ws/src/navigation/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/config/: goal_poses.yaml
catkin_ws/src/navigation/description/urdf/: cali.xacro  cali_base.xacro
catkin_ws/src/navigation/launch/: cali.launch  cali_ecst_lab.launch  localization.launch  localization_ecst_lab.launch  navigation_dwa.launch  navigation_srv_server.launch  navigation_teb.launch  slam_gmapping.launch  spawn_cali.launch  spawn_cali_ecst_lab.launch
catkin_ws/src/navigation/maps/: ecst_map.yaml
catkin_ws/src/navigation/rviz_config/: localization.rviz
catkin_ws/src/navigation/src/: goal_poses.py  navigation_srv_server.py
catkin_ws/src/navigation/world/: cafe_table.world  ecst_lab.world
catkin_ws/src/navigation/world/building_editor_models/coke_can/: model.config
catkin_ws/src/navigation/world/building_editor_models/ecst_lab/: model.config
catkin_ws/src/navigation/world/building_editor_models/ecst_table/: model.config  model.sdf
catkin_ws/src/navigation/world/building_editor_models/trash_can/: model.config  model.sdf
catkin_ws/src/perception/: package.xml
catkin_ws/src/perception/launch/: graspable_object_pose.launch  graspable_object_pose_ecst.launch  pub_object_pose_cafe_table.launch  pub_object_pose_ecst.launch
catkin_ws/src/perception/src/: graspable_object_pose.py  graspable_object_pose_ecst.py  pub_object_pose_ecst.py  pub_object_position_ecst.py  pub_objects_position.py
catkin_ws/src/real_robot/: package.xml
catkin_ws/src/real_robot/launch/: cali_ecst_lab.launch
catkin_ws/src/rover_autonav/launch/: cali.launch  cali_ecst_lab.launch  localization_ecst_lab.launch  navigation_dwa.launch  (+3 more)
docker/: docker-compose.yaml  dockerfile_cali
(+9 files in other folders)
